# stock-market-assistant

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
docs/: plan.md
scripts/: clean.py
src/app/: chat.py  prompts.py
src/mcp_servers/: fmp.py
tests/: test_chat.py  test_fmp_server.py  test_logger.py
